--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="favicon.ico">
+<link rel="icon" type="image/png" href="/タイトルなし.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
