--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     蛸ロボ用地
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
     <p>こんにちは<p>
-  <img src="sushi1.jpg" alt="ロゴマーク">
+  <img src="蛸.png" alt="ロゴマーク">
 <body bgcolor="#38b48b">
 </body>
 </html>
