--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     蛸ロボ用地
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
     <p>こんにちは<p>
-  <img src="https://d.kuku.lu/fd890f223">
+  <img src="https://uploda1.ysklog.net/uploda/b6bde844f6.png">
 <body bgcolor="#38b48b">
 </body>
 </html>
