--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
     蛸ロボ用地
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
-    <p>こんにちは<p>
+    <p>こんにちは!蛸ロボ用地です!PC推奨!<p>
   <img src="https://uploda1.ysklog.net/uploda/b6bde844f6.png">
 <body bgcolor="#38b48b">
 </body>
