--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
     <p>蛸ロボ用地です！PC推奨！<p>
   <img src="https://uploda1.ysklog.net/uploda/b6bde844f6.png">
+    <p>8/10 蛸<p>
+    <div class="aa" style="padding: 0%;border-style: solid;  border-width: 1px; border-color: #ffffff #ffffff #99ff99 #f5f5f5;">
+    <br>ｷｬｰ!!　　　　　　∩蛸∩&nbsp;
+    <br>　　　　　　　　　（･ω･　）　　　　　　　ｻﾞﾊﾞｧ&nbsp;
+    <br>￣￣＼γ⌒ヽ,_,ﾉ&nbsp;ﾉ&nbsp;ハ,_,γ⌒ヽ&nbsp;
+    <br>￣￣￣￣/⌒ヽ,_,ノﾉ　）　&nbsp;ﾉ⌒ν´&nbsp;
+    <br>～～～～～～～～～～～～～～～～～～&nbsp;
+</div>
 <body bgcolor="#38b48b">
 </body>
 </html>
