--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <p>蛸ロボ用地です！PC推奨！<p>
   <img src="https://uploda1.ysklog.net/uploda/b6bde844f6.png">
     <p>8/10 蛸<p>
-    <div class="aa" style="padding: 0%;border-style: solid;  border-width: 1px; border-color: #ffffff #ffffff #99ff99 #f5f5f5;">
+    <div class="aa" style="padding: 0%;border-style: solid;  border-width: 1px; border-color: #ffffff #ffffff #99ff99 #e2041b;">
     <br>ｷｬｰ!!　　　　　　∩蛸∩&nbsp;
     <br>　　　　　　　　　（･ω･　）　　　　　　　ｻﾞﾊﾞｧ&nbsp;
     <br>￣￣＼γ⌒ヽ,_,ﾉ&nbsp;ﾉ&nbsp;ハ,_,γ⌒ヽ&nbsp;
