--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <img src="https://uploda1.ysklog.net/uploda/b6bde844f6.png">
     <p>8/10 蛸<p>
     <div class="aa" style="padding: 0%;border-style: solid;  border-width: 1px; border-color: #ffffff #ffffff #99ff99 #ffffff;">
+    <font size="5" color="#e2041b" face="HGP行書体,HGP行書体">
     <br>ｷｬｰ!!　　　　　　∩蛸∩&nbsp;
     <br>　　　　　　　　　（･ω･　）　　　　　　　ｻﾞﾊﾞｧ&nbsp;
     <br>￣￣＼γ⌒ヽ,_,ﾉ&nbsp;ﾉ&nbsp;ハ,_,γ⌒ヽ&nbsp;
