--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <br>￣￣＼γ⌒ヽ,_,ﾉ&nbsp;ﾉ&nbsp;ハ,_,γ⌒ヽ&nbsp;
     <br>￣￣￣￣/⌒ヽ,_,ノﾉ　）　&nbsp;ﾉ⌒ν´&nbsp;
     <br>～～～～～～～～～～～～～～～～～～&nbsp;
+    <font size="5" color="#485859" face="HGP行書体,HGP行書体">
 </div>
 <body bgcolor="#38b48b">
 </body>
