--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <br>￣￣￣￣/⌒ヽ,_,ノﾉ　）　&nbsp;ﾉ⌒ν´&nbsp;
     <br>～～～～～～～～～～～～～～～～～～&nbsp;
     <font size="5" color="#485859" face="HGP行書体,HGP行書体">
+      <a href="http://azeria.jp/index.php">AA集積場から頂きました</a>
 </div>
 <body bgcolor="#38b48b">
 </body>
