--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <br>￣￣￣￣/⌒ヽ,_,ノﾉ　）　&nbsp;ﾉ⌒ν´&nbsp;
     <br>～～～～～～～～～～～～～～～～～～&nbsp;
     <font size="5" color="#485859" face="HGP行書体,HGP行書体">
-      <a href="http://azeria.jp/index.php">AA集積場から頂きました</a>
+      <a href="http://azeria.jp/index.php">AA集積場</a>
+      
 </div>
 <body bgcolor="#38b48b">
 </body>
