--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <br>～～～～～～～～～～～～～～～～～～&nbsp;
     <font size="5" color="#485859" face="HGP行書体,HGP行書体">
       <a href="http://azeria.jp/index.php">AA集積場</a>
+      <p>から頂きました<p>
       
 </div>
 <body bgcolor="#38b48b">
