--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>蛸ロボ用地</title>
   <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
     蛸ロボ用地
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
