--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>化け鯉</title>
   <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
-    蛸ロボ用地
+    化け鯉(公式)
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
-    <p>蛸ロボ用地です！PC推奨！<p>
+    <p>化け鯉と申しやす！PC推奨！<p>
   <img src="https://uploda1.ysklog.net/uploda/2a27b04190.png">
     <p>8/10 蛸<p>
     <div class="aa" style="padding: 0%;border-style: solid;  border-width: 1px; border-color: #ffffff #ffffff #99ff99 #ffffff;">
