--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>化け鯉</title>
   <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
-    化け鯉(公式)
+    錦の御旗鯉
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
     <p>化け鯉と申しやす！PC推奨！<p>
   <img src="https://uploda1.ysklog.net/uploda/2a27b04190.png">
