--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
     錦の御旗鯉
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
-    <p>化け鯉と申しやす！PC推奨！<p>
+    <p>錦の御旗鯉と申します！PC推奨！<p>
   <img src="https://uploda1.ysklog.net/uploda/2a27b04190.png">
     <p>8/10 蛸<p>
     <div class="aa" style="padding: 0%;border-style: solid;  border-width: 1px; border-color: #ffffff #ffffff #99ff99 #ffffff;">
