--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>化け鯉</title>
+  <title>錦の御旗鯉</title>
   <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
     錦の御旗鯉
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
