--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <p>8/10 蛸<p>
     <div class="aa" style="padding: 0%;border-style: solid;  border-width: 1px; border-color: #ffffff #ffffff #99ff99 #ffffff;">
     <font size="5" color="#e2041b" face="HGP行書体,HGP行書体">
-    <br>ｷｬｰ!!　　　　　　∩蛸∩&nbsp;
-    <br>　　　　　　　　　（･ω･　）　　　　　　　ｻﾞﾊﾞｧ&nbsp;
-    <br>￣￣＼γ⌒ヽ,_,ﾉ&nbsp;ﾉ&nbsp;ハ,_,γ⌒ヽ&nbsp;
-    <br>￣￣￣￣/⌒ヽ,_,ノﾉ　）　&nbsp;ﾉ⌒ν´&nbsp;
-    <br>～～～～～～～～～～～～～～～～～～&nbsp;
+      <textarea name="result"></textarea>
     <font size="5" color="#485859" face="HGP行書体,HGP行書体">
       <p><a href="http://azeria.jp/index.php">AA集積場</a>から頂きました。こういうのどうやって書けばいいんだろう...w</p>
       
