--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     錦の御旗鯉
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
     <p>錦の御旗鯉と申します！PC推奨！<p>
-    <marquee bgcolor="aqua" loop="50"><span style="color:black;font-size:25px;">こんにちは！</span></marquee>
+    <marquee bgcolor="aqua" loop="50">
+      <span style="color:black;font-size:25px;">こんにちは！</span></marquee>
   <img src="https://uploda1.ysklog.net/uploda/2a27b04190.png">
 </div>
 <body bgcolor="#38b48b">
