--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <marquee bgcolor="#38b48b" loop="50">
+  <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
+  <marquee bgcolor="#e6b422" loop="50">
       <span style="color:black;font-size:25px;">NISHIKINOMIHATAGOI  NISHIKINOMIHATAGOI  NISHIKINOMIHATAGOI  NISHIKINOMIHATAGOI  NISHIKINOMIHATAGOI  NISHIKINOMIHATAGOI  NISHIKINOMIHATAGOI  NISHIKINOMIHATAGOI  NISHIKINOMIHATAGOI</span></marquee>
   <title>錦の御旗鯉</title>
   <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
