--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <font size="30" color="#e6b422" face="HGP行書体,HGP行書体">
-  <title>錦の御旗鯉</title>
+  <title>錦の御鯉</title>
   <font size="30" color="#c9171e" face="HGP行書体,HGP行書体">
-    錦の御旗鯉
+    錦の御鯉
   <font size="5" color="#485859" face="HGP行書体,HGP行書体">
-    <p>錦の御旗鯉と申します！PC推奨！<p>
+    <p>錦の御鯉と申します！PC推奨！<p>
   <img src="https://uploda1.ysklog.net/uploda/2a27b04190.png">
 </div>
 <body bgcolor="#38b48b">
